# Gamate

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  LICENSE  QUICK_START.md  README.md  ROADMAP.md  TECHNICAL_REQUIREMENTS.md  check_speech_config.ps1  index.html
.github/workflows/: deploy-pages.yml
gamate/: package.json  pnpm-lock.yaml
gamate/config/: games.toml  prompts.toml  prompts_funny_female.toml  prompts_kobe.toml  prompts_trump.toml
gamate/src/: App.tsx  main.tsx
gamate/src-tauri/: .env.example  .gitignore  Cargo.toml  build.rs  tauri.conf.json
gamate/src-tauri/capabilities/: default.json
gamate/src-tauri/examples/: test_crawler.rs  test_steam_api.rs  test_steam_auth.rs
gamate/src-tauri/src/: lib.rs  main.rs  settings.rs  steam_api.rs  steam_auth.rs  steam_config.rs  steam_wiki_mapper.rs  tray.rs  tts.rs
gamate/src-tauri/src/audio/: continuous_listener.rs  mod.rs
gamate/src-tauri/src/commands/: ai_analysis_commands.rs  ai_assistant_commands.rs  audio_commands.rs  config_commands.rs  hud_commands.rs  mod.rs  screen_commands.rs  simulation_commands.rs  simulation_engine_commands.rs  steam_auth_commands.rs  steam_game_config_commands.rs  steam_wiki_commands.rs  vdb_test_commands.rs
gamate/src-tauri/src/config/: mod.rs
gamate/src-tauri/src/crawler/: fandom_api.rs  utils.rs
gamate/src-tauri/src/livestream/: mod.rs  smart_capture.rs
gamate/src-tauri/src/llm/: ollama.rs  openai.rs
gamate/src-tauri/src/screenshot/: capture.rs  window.rs
gamate/src-tauri/src/simulation/: ai_analyzer.rs  engine.rs  events.rs
gamate/src/components/: VoiceTest.tsx
gamate/src/pages/: HudPage.tsx
gamate/src/services/: configService.ts  (+2 more)
game_partner_skill/: .env.example  CAPTURE_STRATEGY_OPTIMIZATION.md  README.md  package.json  pnpm-lock.yaml
game_partner_skill/config/: config.toml  games.toml  prompts.toml  prompts_funny_female.toml  prompts_kobe.toml  prompts_sunnyou_male.toml  prompts_sweet_girl.toml  prompts_trump.toml
game_partner_skill/public/: selector.html
game_partner_skill/src/: App.tsx  main.tsx
game_partner_skill/src-tauri/: Cargo.toml  tauri.conf.json
(+149 files in other folders)
